Fix some issues reported by SonarCloud