@@ -53,7 +53,7 @@ class ToggleApiTest extends AbstractApiTest {
             fieldWithPath("id").description("The id of the toggle"),
             fieldWithPath("value").description("The value of the toggle"),
             linksSubsection
-    ).andWithPrefix("type.", Stream.of(typeResponseFieldDescriptors, auditResponseFieldsDescriptors).flatMap(Collection::stream).collect(Collectors.toList()));
+    ).andWithPrefix("type.", Stream.of(typeResponseFieldDescriptors, auditResponseFieldsDescriptors).flatMap(Collection::stream).toList());
 
     private final LinksSnippet links = baseLinks.and(
             linkWithRel("spexare").description("Link to the current spexare"),
